--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,7 @@ dt, dd {
   background-color: #343A40;
   min-width: auto;
   max-width: 100%;
-  height: 56px;
+  min-height: 56px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -102,7 +102,7 @@ dt, dd {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  gap: 16px;
+  gap: 6%;
   position: relative;
   left: 16px;
 }
@@ -228,9 +228,14 @@ dt, dd {
   margin-left: 20px;
 }
 
+.card_container_two_adaptive {
+  width: 350px;
+  min-height: 165px;
+}
+
 .card_container_two {
-  max-width: 350px;
-  min-width: none;
+  max-width: 100%;
+  min-width: auto;
   max-height: 165px;
   border: 1px solid rgba(0, 0, 0, 0.1254901961);
   border-radius: 4px;
@@ -277,6 +282,32 @@ dt, dd {
   margin-bottom: 26px;
   margin-left: 20px;
   margin-right: 20px;
+}
+
+.grid {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 574px 153px 225px 161px;
+  grid-template-columns: 574px 153px 225px 161px;
+  grid-auto-rows: 49px;
+  margin-left: 55px;
+  margin-top: 32px;
+  margin-bottom: 73px;
+}
+.grid .grid_item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border: 1px solid #DEE2E6;
+}
+.grid .grid_item_text {
+  margin-left: 20px;
+}
+.grid .grid_item_text_blue {
+  color: #007BFF;
 }
 
 .footer {
