--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,6 @@
+
+
+
 @import "browser.scss";
 
 dt, dd{
@@ -23,7 +26,7 @@ dt, dd{
 
     min-width: auto;
     max-width: 100%;
-    height: 56px;
+    min-height: 56px;
 
     display: flex;
     align-items: center;
@@ -34,7 +37,7 @@ dt, dd{
 
         display:flex;
         flex-direction: row;
-        gap: 16px;
+        gap: 6%;
 
         position: relative;
         left: 16px;
@@ -175,10 +178,15 @@ dt, dd{
         @extend %center;
     }
 }
+.card_container_two_adaptive
+{
+    width: 350px;
+    min-height: 165px;
+}
 .card_container_two
 {
-    max-width: 350px;
-    min-width: none;
+    max-width: 100%;
+    min-width: auto;
 
     max-height: 165px;
 
@@ -227,6 +235,34 @@ dt, dd{
         margin-right: 20px;
     }
 }
+.grid
+{
+    display: grid;
+
+    grid-template-columns: 574px 153px 225px 161px;
+    grid-auto-rows: 49px;
+
+    margin-left: 55px;
+    margin-top: 32px;
+    margin-bottom: 73px;
+    
+    .grid_item
+    {
+        display: flex;
+        align-items: center;
+
+        border: 1px solid #DEE2E6;
+    }
+    .grid_item_text
+    {
+        margin-left: 20px ;
+    }
+    .grid_item_text_blue
+    {
+        color: #007BFF;
+    }
+}
+
 .footer
 {
     background-color: #F5F5F5;
