--- a/figma2/scss/styles.scss
+++ b/figma2/scss/styles.scss
@@ -558,3 +558,37 @@
     width: 441px;
     height: 158px;
 }
+.sixSection
+{
+    position: relative;
+
+    width: 1684px;
+    height: 610px;
+
+    background: url("map.png");
+    background-size: cover;
+
+    margin-top: 89px;
+}
+.point
+{
+    position: absolute;
+
+    margin-top: 154px;
+    margin-left: 1060px;
+}
+.MebellaCard
+{
+    position: absolute;
+
+    margin-top: 186px;
+    margin-left: 223px;
+}
+.footer
+{
+    display: flex;
+    flex-direction: column;
+    
+    width: 1680px;
+    height: 480px;
+}
