--- a/figma2/scss/styles.scss
+++ b/figma2/scss/styles.scss
@@ -588,7 +588,63 @@
 {
     display: flex;
     flex-direction: column;
-    
+    align-items: center;
+
     width: 1680px;
     height: 480px;
+}
+.footer_item
+{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+}
+.mebelloCopyright
+{
+    width: 50%;
+
+    margin-left: 80px;
+}
+.SocialContainer
+{
+    display: flex;
+    flex-direction: row-reverse;
+    width: 50%;
+
+    margin-right: 80px;
+}
+.hr{
+    width: 90%;
+    height: 1px;
+    background-color: #F17E00;
+}
+.tables
+{
+    display: flex;
+    flex-direction: row-reverse;
+    width: 50%;
+
+    margin-right: 80px;
+}
+.navtable_H
+{
+    margin-bottom: 16px;
+    font-weight: bold;
+}
+.navtable
+{
+    width: 173px;
+    height:120px;
+
+    display: flex;
+    flex-direction: column;
+}
+.footer_columns
+{
+    display: flex;
+    flex-direction: column;
+
+    width: 50%;
+
+    margin-left: 80px;
 }
